# PaddleOCREngine

./: CMakeLists.txt  README.md  test.cpp
src/api/models/: doc_img_orientation_classification.cc  doc_img_orientation_classification.h  text_detection.cc  text_detection.h  text_image_unwarping.cc  text_image_unwarping.h  text_recognition.cc  text_recognition.h  textline_orientation_classification.cc  textline_orientation_classification.h
src/api/pipelines/: base.h  doc_preprocessor.cc  doc_preprocessor.h  ocr.cc  ocr.h
src/base/: base_batch_sampler.cc  base_batch_sampler.h  base_cv_result.h  base_infer.cc  base_infer.h  base_pipeline.cc  base_pipeline.h  base_predictor.cc  base_predictor.h
src/common/: image_batch_sampler.cc  image_batch_sampler.h  parallel.h  processors.cc  processors.h  static_infer.cc  static_infer.h  thread_pool.cc  thread_pool.h
src/configs/: doc_preprocessor.yaml
src/modules/image_classification/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
src/modules/image_unwarping/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
src/modules/text_detection/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
src/modules/text_recognition/: predictor.cc  predictor.h  processors.cc  processors.h  result.cc  result.h
src/pipelines/doc_preprocessor/: pipeline.cc  pipeline.h  result.cc  result.h
src/pipelines/ocr/: pipeline.cc  pipeline.h  result.cc  result.h
src/runtime/: ncnn_infer.cc  ncnn_infer.h  onnx_infer.cc  onnx_infer.h  paddle_infer.cc  paddle_infer.h  rknn_infer.cc  rknn_infer.h  tensorrt_infer.cc  tensorrt_infer.h
src/utils/: args.cc  args.h  func_register.h  ilogger.cc  ilogger.h  mkldnn_blocklist.cc  mkldnn_blocklist.h  pp_option.cc  pp_option.h  utility.cc  utility.h  yaml_config.cc  yaml_config.h
tools/: build.sh  build_opencv.sh
